--- a/css/main.css
+++ b/css/main.css
@@ -98,8 +98,12 @@ textarea {
    ========================================================================== */
 
 
-
-
+.left {
+    float: left;
+}
+.right{
+    float: right;
+}
 
 
 
