--- a/css/main.css
+++ b/css/main.css
@@ -106,8 +106,8 @@ textarea {
 }
 
 .menu {
-    font-family: 'KoHo', sans-serif;
-    color: white;
+    font-family: 'Open Sans', sans-serif;
+    color: black;
     margin-top: 4em;
 }
 li {
@@ -120,24 +120,36 @@ li:hover {
     color: #CC66A1; 
     cursor: pointer;
 }
+
 .welcome-scrn{
-    width:100%;
-    height:900px;
-    background-size: cover; 
-    background-image: url('../img/welcomebg.jpg'); 
-    -webkit-filter: grayscale(1);
-    filter: grayscale(1);
-
-
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    background-image: url("../img/bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .welcome-text{
-    font-family: 'Comfortaa', cursive;
-    color: white;
-    font-size: 32px;
-    overflow: hidden;
-    padding: 120px 40px 20px 50px;
+    margin-left:-200px;
+    width:500px;
+    margin-top:50px;
+    margin-bottom: 40px;
 }
-
+.welcome-text > h1{
+    color: white;
+    text-transform: uppercase;
+    font-family: 'Open Sans', sans-serif;
+    font-size:50px;
+}
+.welcome-text > h1 > span {
+    display: inline-block;
+    background: black;
+    margin-bottom: 10px;
+    padding: 10px;
+    -webkit-box-shadow: 0px 4px 10px -1px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 4px 10px -1px rgba(0,0,0,0.75);
+box-shadow: 0px 4px 10px -1px rgba(0,0,0,0.75);
+}
 
 
 
